--- a/p/pa/par/partyfundate.com.html
+++ b/p/pa/par/partyfundate.com.html
@@ -1,33 +1,38 @@
-<!--The following is the downloaded HTML source of the partyfundate.com privacy policy that was archived on 2008-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081217050803id_/http%3A//www.partyfundate.com/privacy.html%3Fprg%3D1%26id%3Dpartyfundate%26g%3D1%26pg%3D1) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the partyfundate.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616180033id_/http%3A//partyfundate.com/privacy.html%3Fprg%3D1%26id%3Dpartyfundate%26g%3D1%26pg%3D1) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><!-- InstanceBegin template="/Templates/public.dwt" codeOutsideHTMLIsLocked="false" --><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=7">
 <link rel="icon" href="/favicon.ico" type="image/x-icon">
-<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"><link rel="icon" href="/animated_favicon.gif" type="image/gif">
 <!-- InstanceBeginEditable name="editTitle" -->
-<title>Partyfundate.com - World's Best Personals</title>
+<title>PartyFunDate - World's Best Personals</title>
 <!-- InstanceEndEditable -->
-<link href="/css/partyfundate/site.css" rel="stylesheet" type="text/css">
+<link rel="stylesheet" type="text/css" href="http://cachewp.fling.com/css/partyfundate.com/1244162061/members.css">
+<link rel="stylesheet" type="text/css" href="http://cachewp.fling.com/css/partyfundate.com/1244162061/public.css">
 <!-- InstanceBeginEditable name="editHead" -->
 <!-- InstanceEndEditable --><!-- InstanceParam name="bodyOnLoad" type="text" value="" -->
 </head>
 
 <body onload="">
 
-<div align="center">
-<table cellspacing="0" cellpadding="0" class="main">
-    <tbody><tr>
-      <td valign="top">
-
-                    <table cellspacing="0" cellpadding="0" class="header">
+            <table align="center" cellpadding="0" cellspacing="0" class="header" id="header">
                 <tbody><tr>
-                    <td width="17%" valign="bottom" align="left"><a href="/?"><img src="http://media.fling.com/images/pfd_logo.gif" alt="Partyfundate.com - Adult Personals that Work" width="233" height="93" border="0"></a></td>
+                    <td width="17%" valign="bottom" align="left"><a href="/?"><img src="http://media.fling.com/images/pfd_logo.gif" alt="PartyFunDate - Adult Personals that Work" width="233" height="93" border="0"></a></td>
                     <td width="30%" valign="bottom" align="right">&nbsp;</td>
                     <td width="26%">&nbsp;</td>
                     <td width="27%" valign="bottom" align="right">&nbsp;</td>
                 </tr>
             </tbody></table>
+
+
+<div class="main">
+<div class="content_tour">
+<table cellspacing="0" cellpadding="0" width="100%">
+    <tbody><tr>
+      <td valign="top">
+
 
             <!-- InstanceBeginEditable name="editNav" --><!-- InstanceEndEditable -->
 
@@ -35,9 +40,9 @@
 
 <table class="main-content" cellpadding="10" cellspacing="0">
   <tbody><tr>
-    <td valign="top"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="module-white">
+    <td valign="top"><table width="100%" border="0" cellpadding="0" cellspacing="0" id="terms" class="module-white">
       <tbody><tr>
-        <td colspan="2" align="left" class="title3">PARTYFUNDATE.COM PRIVACY POLICY </td>
+        <td colspan="2" align="left" class="title3">PARTYFUNDATE PRIVACY POLICY </td>
       </tr>
       <tr>
         <td colspan="2"><table width="100%" border="0" cellspacing="0" cellpadding="5">
@@ -54,10 +59,10 @@
                 <td valign="top"><p>PartyFunDate Incorporated ("we" or " PartyFunDate ")
                   have adopted this privacy policy to protect your personal information and to
                   let you know how we might use it. This privacy policy only applies to activities you perform on the
-                  Partyfundate.com website, transactions for purchasing PartyFunDate subscription
+                  PartyFunDate website, transactions for purchasing PartyFunDate subscription
                   services, and activities or communications that occur using the PartyFunDate
                   service (collectively known as the "Service") and does not apply to any other
-                  Website or offline point of contact between Partyfundate.com, PartyFunDate, or any
+                  Website or offline point of contact between PartyFunDate, PartyFunDate, or any
                   other company, and consumers. This policy was implemented on January 1, 2003
                   this policy may change from time-to-time, please periodically review this
                   page. Each time you use the Service
@@ -138,22 +143,22 @@
                       personal information to help us efficiently operate the Service, to contact
                       you in connection with your transactions and other activities on the Service
                       (including, but not limited to, confirmation emails or important news that
-                      could affect your relationship with Partyfundate.com), and to forward messages to
-                      you from other Partyfundate.com users. These types of communications are known as
+                      could affect your relationship with PartyFunDate), and to forward messages to
+                      you from other PartyFunDate users. These types of communications are known as
                       "Operational Communications." In some cases, Operational
                       Communications may also contain commercial messages, such as banner ads and
                       special offers.</p>
 			  <p>We also use personal information to send
                     you newsletters, information, offers and other promotional materials for
-                    Partyfundate.com's or third parties' goods or services. We attempt to send you
+                    PartyFunDate's or third parties' goods or services. We attempt to send you
                     offers that are of value to you, such as discounts, exclusive offers or
                     special event information. The Service provides you with options to decline
-                    to receive communications from Partyfundate.com (other than those contained in
+                    to receive communications from PartyFunDate (other than those contained in
                     Operational Communications). Some of these options may only be for a certain
                     category of communications; others may be more general. By posting a profile
-                    on the Service, you are opting in to receive messages from other Partyfundate.com
+                    on the Service, you are opting in to receive messages from other PartyFunDate
                     members by email or text message. To stop receiving messages from other
-                    Partyfundate.com members, change your account settings on Partyfundate.com.</p>
+                    PartyFunDate members, change your account settings on PartyFunDate.</p>
                   <p>To operate the Service, including
                     processing your transactions and supporting your activities on the Service,
                     we may share your personal information with our agents, representatives,
@@ -191,7 +196,7 @@
                     to us. Some Co-Branded Pages may contain an action tag (also known as a Web
                     Beacon or a 1 pixel .gif file) that a third party, may use to read cookies
                     that it, or its clients, may have placed on your browser at other
-                    (non-Partyfundate.com) web sites before your visit to Partyfundate.com. This technology
+                    (non-PartyFunDate) web sites before your visit to PartyFunDate. This technology
                     is used to measure the effectiveness of advertisements on such other Websites
                     that promote Co-Branded Pages. Further, such other third parties may use the
                     information collected through this technology to learn more about your visits
@@ -219,10 +224,10 @@
                       your interests. We may also share demographic information with advertisers on
                       an anonymous and aggregated basis (i.e., without telling the advertisers your
                       identity). One of the reasons we may do this is to increase the likelihood
-                      that our advertisers' goods and services will appeal to Partyfundate.com's users,
+                      that our advertisers' goods and services will appeal to PartyFunDate's users,
                       so that we may target specific ads at specific demographic groups. Our
                       sharing of demographic information with advertisers is anonymous (i.e., we do
-                      not tell advertisers which particular Partyfundate.com users are members of which
+                      not tell advertisers which particular PartyFunDate users are members of which
                       demographic groups), subject to the rest of this privacy policy. When you
                       respond to an advertisement, however, we ask you to remember that if that ad
                       that is targeted to a demographic group and you decide to give the advertiser
@@ -256,20 +261,20 @@
                       certain communications and modify personal information or demographic
                       information you have provided to us, and to hide demographic information
                       from, or make demographic information visible to, the public users of the
-                      Service, at anytime by going to the "Account Settings" in your Partyfundate.com
+                      Service, at anytime by going to the "Account Settings" in your PartyFunDate
                       profile of the Service. Please be aware that it may take several hours for
                       the changes you make to take effect on the public areas of the Service. We
                       thank you for your patience. Please note that changing or deleting your
                       information in the "Account Settings" section of the Service, or otherwise
-                      opting-out of receipt of email communications from Partyfundate.com, will only
+                      opting-out of receipt of email communications from PartyFunDate, will only
                       change or delete the data in our database for purposes of future activities
-                      on the Service and for managing future communications from Partyfundate.com. These
+                      on the Service and for managing future communications from PartyFunDate. These
                       changes and deletions will not change or delete emails or information that we
                       may have already forwarded to other users or credit card companies or any
                       other third parties, all as provided above in this privacy policy.</p>
                   <p>If you have any questions or concerns
 				  about this privacy policy, the practices of the Service, or your dealings
-                    with the Service, you can contact us at <a href="mailto:support@fling.com">support@fling.com</a>.
+                    with the Service, you can contact us at <a href="mailto:support@gpnethelp.com">support@gpnethelp.com</a>.
                       You can also send us mail to: Privacy Officer, <span style="color:#333333"><!--?=SITE_NAME?-->
                         Incorporated, 705 Washington Ave 2<sup>nd</sup> Floor Miami Beach, FL. 33139.</span></p></td>
               </tr>
@@ -294,9 +299,8 @@
                         <table border="0" cellpadding="10" cellspacing="0" class="footer">
                 <tbody><tr>
                     <td align="center"><div class="txtfooter">
-                        copyright ©2006 All rights reserved, www.Partyfundate.com<br>
-<a href="/jobs.html?g=1&amp;pg=1"><b><span style="font-size: 10px">Jobs</span></b></a>|
-<a href="http://www.hugetraffic.com" target="_new">Webmasters</a> |
+                        copyright ©2006 All rights reserved, www.PartyFunDate<br>
+<a href="/jobs.html?g=1&amp;pg=1"><b><span style="font-size: 10px">Jobs</span></b></a> |
 <a href="/terms.html?g=1&amp;pg=1">terms of use</a> |
 <a href="/privacy.html?g=1&amp;pg=1">privacy policy</a> |
 <a href="/faqs.html?g=1&amp;pg=1">faqs</a> |
@@ -327,4 +331,4 @@ pageTracker._trackPageview();
 </div>
 
 <!-- InstanceEnd -->
-</body></html>
+</div></body></html>
