--- a/s/sh/sha/sharpbrains.com.html
+++ b/s/sh/sha/sharpbrains.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the sharpbrains.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216162949id_/http%3A//www.sharpbrains.com/z/your-privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the sharpbrains.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616180603id_/http%3A//www.sharpbrains.com/z/your-privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head profile="http://gmpg.org/xfn/11">
 
@@ -121,44 +121,43 @@ if (window.attachEvent) window.attachEvent("onload", sfHover);
         <div id="home">
              <a href="http://www.sharpbrains.com/" title="SharpBrains"><img border="0" src="/images/home.gif" width="40" height="40"></a>
         </div>
-        <div id="slogan">
-          <a href="http://www.sharpbrains.com/" title="SharpBrains"><img border="0" src="/images/slogan-1-Trans.gif" width="340" height="35"></a>
+        <div id="slogan"><a href="http://www.sharpbrains.com/" title="SharpBrains"><img border="0" src="/images/slogan-1-Trans.gif" width="340" height="35"></a></div>
 		</div>
 
-      <!--    <a href="http://www.sharpbrains.com/" title="SharpBrains"><h2>Brain Fitness and Cognitive Health news</h2></a>   -->
-		</div>
     </div>   <!-- end of div=header  -->
-
-
-
+		<div><a href="http://www.sharpbrains.com/book/"><img border="0" src="/images/banner_ad2_01.jpg" width="374" height="90"></a><a href="http://www.sharpbrains.com/market-report/"><img border="0" src="/images/banner_ad2_02.jpg" width="376" height="90"></a></div>
 
 <ul id="menu">
 
              <!--   <li><a href="http://www.sharpbrains.com/blog/" title="Blog Home">Blog</a></li>    -->
                 <li class="page_item"><a href="http://www.sharpbrains.com/blog/" title="Blog">Blog</a></li>
+<li class="page_item"><a href="http://www.sharpbrains.com/book/" title="Book">Book</a><ul>
+	<li class="page_item"><a href="http://www.sharpbrains.com/book/book-club-discussion-guide/" title="Book Club Discussion Guide">Book Club Discussion Guide</a>	</li>
+</ul>
+</li>
+<li class="page_item"><a href="http://www.sharpbrains.com/market-report/" title="Market Research">Market Research</a><ul>
+	<li class="page_item"><a href="http://www.sharpbrains.com/market-report/flagship-state-of-the-market-2008/" title="Report: State of the Market 2009">Report: State of the Market 2009</a>	</li>
+	<li class="page_item"><a href="http://www.sharpbrains.com/market-report/market-overview-graphic/" title="Visual: State of the Market 2009 ">Visual: State of the Market 2009 </a>	</li>
+	<li class="page_item"><a href="http://www.sharpbrains.com/market-report/premium-research-circle/" title="Premium Research Circle">Premium Research Circle</a>	</li>
+	<li class="page_item"><a href="http://www.sharpbrains.com/market-report/list-of-clients/" title="List of Clients">List of Clients</a>	</li>
+	<li class="page_item"><a href="http://www.sharpbrains.com/market-report/endorsements/" title="Endorsements">Endorsements</a>	</li>
+</ul>
+</li>
+<li class="page_item"><a href="http://www.sharpbrains.com/toparticles/" title="Top Articles">Top Articles</a><ul>
+	<li class="page_item"><a href="http://www.sharpbrains.com/toparticles/aerobic-physical-exercise/" title="Aerobic/ Physical Exercise">Aerobic/ Physical Exercise</a>	</li>
+	<li class="page_item"><a href="http://www.sharpbrains.com/toparticles/alzheimers-disease/" title="Alzheimer's Disease">Alzheimer's Disease</a>	</li>
+	<li class="page_item"><a href="http://www.sharpbrains.com/toparticles/brain-fitness-market/" title="Brain Fitness Market">Brain Fitness Market</a>	</li>
+	<li class="page_item"><a href="http://www.sharpbrains.com/toparticles/cognitive-assessments/" title="Cognitive Assessments">Cognitive Assessments</a>	</li>
+	<li class="page_item"><a href="http://www.sharpbrains.com/toparticles/cognitive-training/" title="Cognitive Training">Cognitive Training</a>	</li>
+	<li class="page_item"><a href="http://www.sharpbrains.com/toparticles/education-learning-and-teaching/" title="Education, Learning and Teaching">Education, Learning and Teaching</a>	</li>
+	<li class="page_item"><a href="http://www.sharpbrains.com/toparticles/neurogenesis-and-neuroplasticity/" title="Neurogenesis and Neuroplasticity">Neurogenesis and Neuroplasticity</a>	</li>
+	<li class="page_item"><a href="http://www.sharpbrains.com/toparticles/nutrition-supplements/" title="Nutrition &amp; Supplements">Nutrition &amp; Supplements</a>	</li>
+	<li class="page_item"><a href="http://www.sharpbrains.com/toparticles/stress-management/" title="Stress Management">Stress Management</a>	</li>
+</ul>
+</li>
 <li class="page_item"><a href="http://www.sharpbrains.com/newsletter/" title="Newsletter">Newsletter</a><ul>
 	<li class="page_item"><a href="http://www.sharpbrains.com/newsletter/archives/" title="Archives">Archives</a>	</li>
 	<li class="page_item"><a href="http://www.sharpbrains.com/newsletter/expert-contributors/" title="Expert Contributors">Expert Contributors</a>	</li>
-</ul>
-</li>
-<li class="page_item"><a href="http://www.sharpbrains.com/market-report/" title="Market Report">Market Report</a><ul>
-	<li class="page_item"><a href="http://www.sharpbrains.com/market-report/executive-summary/" title="Executive Summary">Executive Summary</a>	</li>
-	<li class="page_item"><a href="http://www.sharpbrains.com/market-report/report-highlights/" title="Report Highlights">Report Highlights</a>	</li>
-	<li class="page_item"><a href="http://www.sharpbrains.com/market-report/table-of-contents/" title="Table of Contents">Table of Contents</a>	</li>
-	<li class="page_item"><a href="http://www.sharpbrains.com/market-report/list-of-figures/" title="List of Figures">List of Figures</a>	</li>
-	<li class="page_item"><a href="http://www.sharpbrains.com/market-report/companies-included/" title="Companies Included">Companies Included</a>	</li>
-	<li class="page_item"><a href="http://www.sharpbrains.com/market-report/accolades/" title="Endorsements">Endorsements</a>	</li>
-</ul>
-</li>
-<li class="page_item"><a href="http://www.sharpbrains.com/special-reports/" title="Special Reports">Special Reports</a><ul>
-	<li class="page_item"><a href="http://www.sharpbrains.com/special-reports/webinar-top-ten-2008-events/" title="Webinar: Top Ten 2008 Events">Webinar: Top Ten 2008 Events</a>	</li>
-	<li class="page_item"><a href="http://www.sharpbrains.com/special-reports/brain-fitness-centers-in-senior-housing/" title="Brain Fitness in Seniors Housing">Brain Fitness in Seniors Housing</a>	</li>
-</ul>
-</li>
-<li class="page_item"><a href="http://www.sharpbrains.com/clients/" title="Clients">Clients</a><ul>
-	<li class="page_item"><a href="http://www.sharpbrains.com/clients/become-a-client/" title="Become a Client">Become a Client</a>	</li>
-	<li class="page_item"><a href="http://www.sharpbrains.com/clients/list-of-clients/" title="List of Clients">List of Clients</a>	</li>
-	<li class="page_item"><a href="http://www.sharpbrains.com/clients/endorsements/" title="Endorsements">Endorsements</a>	</li>
 </ul>
 </li>
 <li class="page_item"><a href="http://www.sharpbrains.com/teasers/" title="BrainTeasers">BrainTeasers</a><ul>
@@ -168,18 +167,18 @@ if (window.attachEvent) window.attachEvent("onload", sfHover);
 </ul>
 </li>
 <li class="page_item"><a href="http://www.sharpbrains.com/resources/" title="Resources">Resources</a><ul>
-	<li class="page_item"><a href="http://www.sharpbrains.com/resources/10-question-evaluation-checklist/" title="Product Evaluation Checklist">Product Evaluation Checklist</a>	</li>
+	<li class="page_item"><a href="http://www.sharpbrains.com/resources/10-question-evaluation-checklist/" title="Program Evaluation Checklist">Program Evaluation Checklist</a>	</li>
 	<li class="page_item"><a href="http://www.sharpbrains.com/resources/neuroscience-interview-series/" title="Neuroscience Interview Series">Neuroscience Interview Series</a>	</li>
-	<li class="page_item"><a href="http://www.sharpbrains.com/resources/books/" title="Top 21 Brain Books">Top 21 Brain Books</a>	</li>
+	<li class="page_item"><a href="http://www.sharpbrains.com/resources/books/" title="Top 10 Brain Fitness Books">Top 10 Brain Fitness Books</a>	</li>
 	<li class="page_item"><a href="http://www.sharpbrains.com/resources/author-speaks-series/" title="Author Speaks Series">Author Speaks Series</a>	</li>
 	<li class="page_item"><a href="http://www.sharpbrains.com/resources/glossary/" title="Glossary: Brain/ Cognitive Terms">Glossary: Brain/ Cognitive Terms</a>	</li>
 	<li class="page_item"><a href="http://www.sharpbrains.com/resources/web-sites/" title="Directory: Web Sites and Articles">Directory: Web Sites and Articles</a>	</li>
 	<li class="page_item"><a href="http://www.sharpbrains.com/resources/encephalon-blog-carnival/" title="Encephalon Archives &amp; Calendar">Encephalon Archives &amp; Calendar</a>	</li>
-	<li class="page_item"><a href="http://www.sharpbrains.com/resources/metacarnival-calendar-and-archives/" title="MetaCarnival Calendar &amp; Archives">MetaCarnival Calendar &amp; Archives</a>	</li>
 </ul>
 </li>
 <li class="page_item"><a href="http://www.sharpbrains.com/about-us/" title="About Us">About Us</a><ul>
-	<li class="page_item"><a href="http://www.sharpbrains.com/about-us/press-room/" title="News and Press Room ">News and Press Room </a>	</li>
+	<li class="page_item"><a href="http://www.sharpbrains.com/about-us/press-room/" title="News  ">News  </a>	</li>
+	<li class="page_item"><a href="http://www.sharpbrains.com/about-us/cognitive-health-track/" title="Cognitive Health Track (G4H 09)">Cognitive Health Track (G4H 09)</a>	</li>
 	<li class="page_item"><a href="http://www.sharpbrains.com/about-us/the-team/" title="Our Mission and Team">Our Mission and Team</a>	</li>
 	<li class="page_item"><a href="http://www.sharpbrains.com/about-us/workshops/" title="Speaking Events &amp; Conferences">Speaking Events &amp; Conferences</a>	</li>
 	<li class="page_item"><a href="http://www.sharpbrains.com/about-us/advisory-boards/" title="Advisory Boards">Advisory Boards</a>	</li>
@@ -317,7 +316,7 @@ Effective Date: November 1, 2006</p>
     </div>  <!-- end of id=page-wide -->
 
 <div id="wp-footer"> <!-- wordpress footer content -->
-		 <p> © 2008 SharpBrains. All rights reserved. Please consider our <a href="/z/your-privacy/" title="Privacy Policy">Privacy Policy</a></p>
+		 <p> © 2009 SharpBrains. All rights reserved. Please consider our <a href="/z/your-privacy/" title="Privacy Policy">Privacy Policy</a></p>
 
 
 </div>    <!-- close wp-footer x-->
