--- a/a/al/all/allaboutlawns.com.html
+++ b/a/al/all/allaboutlawns.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the allaboutlawns.com privacy policy that was archived on 2008-09-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080920063606id_/http%3A//www.allaboutlawns.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the allaboutlawns.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616180753id_/http%3A//www.allaboutlawns.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 		<title>Privacy Policy - All About Lawns</title>
@@ -9,6 +9,7 @@
 	<script language="javascript" type="text/javascript" src="common/common.js"></script>
 
 
+<meta name="WT.qs_dlk" content="3200a408b57276d91224fc92a7f304cd">
 </head>
 <body onunload="get_quote();"><!--Begin header (common include) -->
 <div align="center">
@@ -63,7 +64,7 @@
 
 <div align="center">
 <div align="center">
-			 <div id="div_bottom_quad">
+			<!-- <div id="div_bottom_quad">
 								<script language="JavaScript">
 								
 								var zflag_nid="203"; var zflag_cid="363401/297407/297406/297312/246440/217516"; var zflag_sid="3185"; var zflag_width="728"; var zflag_height="90"; var zflag_sz="14"; 
@@ -73,7 +74,7 @@
 								<script language="JavaScript" src="http://k.kopsil.com/jsc/dr/fl.js"></script>
 								
 								<noscript> <a href="http://d.detyti.com/cgi/r?;n=203;c=363401/297407/297406/297312/246440/217516;s=3185;x=3584;f=200802061434280;u=j;z=TIMESTAMP" target="_blank"><img border="0" width="728" height="90" src="http://d.detyti.com/cgi/x?;n=203;c=363401/297407/297406/297312/246440/217516;s=3185;x=3584;u=j;z=TIMESTAMP" alt="Click here"></a> </noscript><br><br>
-			</div> 
+			</div> -->
 			
 	</div><table class="tbody">
 	<tbody><tr>
@@ -193,92 +194,8 @@ By using this Web site, you consent to the terms of our Online PRIVACY POLICY an
 			<!-- Feature Box 2 (probably search) -->
 			
 			<!-- Feature Box 3 (probably The Green Pages) -->
-						<table class="boxright2">
-				<tbody><tr>
-					<td width="182" height="45" style="padding-bottom: 3px; font-family: Tahoma; color: #FFFFFF; font-size: 12px; text-align: center; background-color: #189600; padding-top: 7px;">Find Lawn Care <br>Services Near you</td>
-				</tr>
-				<!--
-				<tr>
-					<td class="boxcontent">
-						<form name="greenpages" style="margin-bottom:10px; padding-bottom:0px;">
-							<span class="titlel">U.S.A.:</span>
-							<br>
-							<select name="usa" onChange="loadState(this.value)">
-								<option value="none">Select a State</option>
-								<option value="alabama">Alabama</option>
-								<option value="alaska">Alaska</option>
-								<option value="arizona">Arizona</option>
-								<option value="arkansas">Arkansas</option>
-								<option value="california">California</option>
-								<option value="colorado">Colorado</option>
-								<option value="connecticut">Connecticut</option>
-								<option value="delaware">Delaware</option>
-								<option value="district_of_columbia">District of Columbia</option>
-								<option value="florida">Florida</option>
-								<option value="georgia">Georgia</option>
-								<option value="hawaii">Hawaii</option>
-								<option value="idaho">Idaho</option>
-								<option value="illinois">Illinois</option>
-								<option value="indiana">Indiana</option>
-								<option value="iowa">Iowa</option>
-								<option value="kansas">Kansas</option>
-								<option value="kentucky">Kentucky</option>
-								<option value="louisiana">Louisiana</option>
-								<option value="maine">Maine</option>
-								<option value="maryland">Maryland</option>
-								<option value="massachusetts">Massachusetts</option>
-								<option value="michigan">Michigan</option>
-								<option value="minnesota">Minnesota</option>
-								<option value="mississippi">Mississippi</option>
-								<option value="missouri">Missouri</option>
-								<option value="montana">Montana</option>
-								<option value="nebraska">Nebraska</option>
-								<option value="nevada">Nevada</option>
-								<option value="new_hampshire">New Hampshire</option>
-								<option value="new_jersey">New Jersey</option>
-								<option value="new_mexico">New Mexico</option>
-								<option value="new_york">New York</option>
-								<option value="north_carolina">North Carolina</option>
-								<option value="north_dakota">North Dakota</option>
-								<option value="ohio">Ohio</option>
-								<option value="oklahoma">Oklahoma</option>
-								<option value="oregon">Oregon</option>
-								<option value="pennsylvania">Pennsylvania</option>
-								<option value="rhode_island">Rhode Island</option>
-								<option value="south_carolina">South Carolina</option>
-								<option value="south_dakota">South Dakota</option>
-								<option value="tennessee">Tennessee</option>
-								<option value="texas">Texas</option>
-								<option value="utah">Utah</option>
-								<option value="vermont">Vermont</option>
-								<option value="virginia">Virginia</option>
-								<option value="washington">Washington</option>
-								<option value="west_virginia">West Virginia</option>
-								<option value="wisconsin">Wisconsin</option>
-								<option value="wyoming">Wyoming</option>
-							</select>
-							<br>
-							<br>
-							<span class="titlel">Canada:</span>
-							<br>
-							<select name="canada" onChange="loadState(this.value)">
-								<option value="none">Select a Province</option>
-								<option value="alberta">Alberta</option>
-								<option value="british_columbia">British Columbia</option>
-								<option value="manitoba">Manitoba</option>
-								<option value="quebec">Quebec</option>
-							</select>
-						</form>
-					</td>
-				</tr>
-				-->
-				<tr>
-					<td>
-						<script language="JavaScript" type="text/javascript" src="http://www.allaboutlawns.com/includes/gtlcForm.js.php"></script>
-					</td>
-				</tr>
-  			</tbody></table>
-  			<img src="/images/spacer.gif" width="1" height="6"><br>
+			<iframe id="poll_iframe" src="http://www.allaboutlawns.com/includes/box_poll.php" width="181" height="240" frameborder="0" scrolling="no" style="border:none; padding:0; margin:0;"></iframe> 
+
 
   			<!-- Feature Box 4 (probably Product Special) -->
 			<div align="center" style="margin-bottom:5px;">
@@ -298,8 +215,6 @@ var zflag_nid="203"; var zflag_cid="297551/297407/297406/297312/246440/217516"; 
 			<td class="greenbar">
 				<a class="footlinks" href="http://www.allaboutlawns.com/site-map/index.php">Site Map</a>&nbsp;|&nbsp;
 				<a class="footlinks" href="http://www.allaboutlawns.com/contact.php">Contact Us</a>&nbsp;|&nbsp;
-				<!--<a class="footlinks" href="advertise.php">Advertise With Us</a>&nbsp;|&nbsp;-->
-				<a class="footlinks" href="http://www.allaboutlawns.com/site_linking.php">Link to Your Site</a>&nbsp;|&nbsp;
 				<a class="footlinks" href="http://www.allaboutlawns.com/forum/viewforum.php?f=3" target="new">Equipment for Sale</a>
 			</td>
 			<td class="greenbar">
@@ -318,9 +233,14 @@ var zflag_nid="203"; var zflag_cid="297551/297407/297406/297312/246440/217516"; 
 			</td>
 		</tr>
 	</tbody></table>
+    <table width="770" border="0" cellspacing="0" cellpadding="0" class="footer">
+        <tbody><tr>
+            <td class="disclaimer" align="center"> *Offer valid for new residential customers only. Not valid on previous purchases or existing services. Valid only with participating TruGreen locations. Please call 1-800-615-9411 for availability of service in your area. Home services that require specialized licensing or certification will be performed by companies appropriately qualified and/or licensed. TruGreen is a registered mark of TruGreen Limited Partnership.</td>
+        </tr>	
+    </tbody></table>
 </div>
 <!-- WebTrends -->
-<script type="text/javascript" src="http://allaboutlawns.com/wt/wtadv.js"></script>
+<script type="text/javascript" src="http://www.allaboutlawns.com/wt/wtadv.js"></script>
 <script type="text/javascript">
 	var gDomain="allaboutlawns.com";
 	var gDcsId="dcsvaxrdar4tuuf7o2pq0yd6q_1l2u";
@@ -329,9 +249,9 @@ var zflag_nid="203"; var zflag_cid="297551/297407/297406/297312/246440/217516"; 
 		document.write("<SCR"+"IPT TYPE='text/javascript' SRC='"+"http"+(window.location.protocol.indexOf('https:')==0?'s':'')+"://"+gDomain+ "/wt/" + "wtid.php"+"'><\/SCR"+"IPT>");
 	}
 </script>
-<script type="text/javascript" src="http://allaboutlawns.com/wt/wtrack.js"></script>
+<script type="text/javascript" src="http://www.allaboutlawns.com/wt/wtrack.js"></script>
 <noscript>
-<IMG ALT="" BORDER="0" NAME="DCSIMG" WIDTH="1" HEIGHT="1" SRC="http://allaboutlawns.com/wt/wt.php?dcsuri=/nojavascript&WT.js=No&WT.tv=8.0.2">
+<IMG ALT="" BORDER="0" NAME="DCSIMG" WIDTH="1" HEIGHT="1" SRC="http://www.allaboutlawns.com/wt/wt.php?dcsuri=/nojavascript&WT.js=No&WT.tv=8.0.2">
 </noscript>
 <script language="JavaScript">var tcdacmd="dt";</script><script src="http://an.tacoda.net/an/17004/slf.js" language="JavaScript"></script>
 
