--- a/k/ki/kin/kingfisherworld.com.html
+++ b/k/ki/kin/kingfisherworld.com.html
@@ -1,10 +1,11 @@
-<!--The following is the downloaded HTML source of the kingfisherworld.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216070942id_/http%3A//www.kingfisherworld.com/privacy_policy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the kingfisherworld.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616182036id_/http%3A//www.kingfisherworld.com/privacy_policy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 <title>KINGFISHER World</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <link href="Images/kingfisherworld.css" rel="stylesheet" type="text/css">
+ <link rel="shortcut icon" type="image/ico" href="http://www.kingfisherworld.com/images/kingfisher_urllogo.png">
 </head>
 
 <body>
@@ -12,7 +13,7 @@
   <tbody><tr>
     <td><table width="0%" border="0" cellspacing="0" cellpadding="0">
       <tbody><tr>
-        <td class="bodyhead">KINGFISHER World Privacy Policy 		2008</td>
+        <td class="bodyhead">KINGFISHER World Privacy Policy 		2009</td>
       </tr>
       <tr>
         <td class="bodytext">&nbsp;</td>
